Fix interface brokering for dead source instances

When the Service Manager processes an incoming interface request it gets
the source instance's (i.e. the requestor's) interface provider spec from
the corresponding running Instance object. If said Instance happens to
have become unreachable (i.e. it still exists but has begun to coordinate
clean shutdown) by the time one of its requests is dispatched and
processed, the Service Manager -- for some reason -- barrels ahead using
an empty interface spec which is guaranteed to fail all checks.

Instead the Service Manager should simply terminate the operation early,
reply to the dying instance who will ignore it anyway, and let the
request pipe be cast into oblivion.

This CL does that, and also updates some Bind callsites for extra credit.

Note that while this fixes flaky crashes in DCHECK builds, the effects
of the bug are otherwise innocuous (extra line of log spam) in
production.

Bug: 801618
Change-Id: I3ac7280577d569e7bedc55723a974c79d161996f
Reviewed-on: https://chromium-review.googlesource.com/868033
Reviewed-by: Jay Civelli <jcivelli@chromium.org>
Commit-Queue: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529459}
Former-commit-id: 6e9c25680f8898e1530b62d6c84b1cb536a24c9f